--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -11,7 +11,8 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
+        {% stylesheet application %}
+        {% javascript application %}
     </head>
     <body>
 
