--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -16,7 +16,12 @@
   </head>
   <body>
     <header>
-
+      <div class="row">
+        <div class="small-12 columns text-center">
+          <h1 class="logo">Yellowen</h1>
+          <h2>Developers</h2>
+        </div>
+      </div>
     </header>
 
     <div class="site">
