first svg file added

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -21,6 +21,8 @@
           <h1 class="logo">Yellowen</h1>
           <h2>Developers</h2>
         </div>
+
+        {% image ruby.svg %}
       </div>
     </header>
 
