--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -21,8 +21,15 @@
           <h1 class="logo">Yellowen</h1>
           <h2>Developers</h2>
         </div>
-
+        <div class="logos">
         {% image ruby.svg %}
+        {% image rails.svg %}
+        {% image python.svg %}
+        {% image django.svg %}
+        {% image js.svg %}
+        {% image debian.svg %}
+        {% image android.svg %}
+        </div>
       </div>
     </header>
 
