css js html svg files added

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -25,10 +25,13 @@
         {% image ruby.svg %}
         {% image rails.svg %}
         {% image python.svg %}
-        {% image django.svg %}
         {% image js.svg %}
         {% image debian.svg %}
         {% image android.svg %}
+        {% image html.svg %}
+        {% image css.svg %}
+        {% image nodejs.svg %}
+
         </div>
       </div>
     </header>
