--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -10,6 +10,19 @@
     {% javascript application %}
   </head>
   <body>
+
+    <div class="hero">
+      <div class="hero-inner">
+        <a href="" class="hero-logo"><img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_1.png" alt=""></a>
+	<div class="hero-copy">
+	  <h1>Short description of Product</h1>
+	  <p>A few reasons why this product is worth using, who is it for and why do they need it.</p>
+	</div>
+        <button>Learn More</button>
+      </div>
+    </div>
+
+
     <div class="site">
       <div class="header">
         <h1 class="title"><a href="/">{{ site.name }}</a></h1>
