--- a/src/_assets/stylesheets/patterns/hero.scss
+++ b/src/_assets/stylesheets/patterns/hero.scss
@@ -7,7 +7,7 @@
    $hero-background: desaturate(darken($base-accent-color, 20), 30);
    $hero-color: white;
 
-   background: url(https://raw.github.com/Magnus-G/Random/master/lake-transparent.png);
+   background: url(asset_path('pat.png'));
       background-color: $hero-background;
       background-repeat: no-repeat;
       background-position: top;
