--- a/src/_assets/stylesheets/variables.scss
+++ b/src/_assets/stylesheets/variables.scss
@@ -1,7 +1,20 @@
+@import "lib/neat/neat-helpers";
+
 $very_light_gray: #eeeeec;
+$lighter_gray: #dedede;
 
 $darker_gray: #3f3f3f;
 
 $bg: $darker_gray;
 
 $header_height: 40em;
+
+// Grid
+$column: 70px;
+$gutter: 20px;
+$grid-columns: 12;
+$max-width: em(1000);
+
+// Define your breakpoints
+$tablet: new-breakpoint(max-width 768px 8);
+$mobile: new-breakpoint(max-width 480px 4);
