--- a/src/_assets/stylesheets/variables.scss
+++ b/src/_assets/stylesheets/variables.scss
@@ -1,11 +1,15 @@
 @import "lib/neat/neat-helpers";
 
+$almost_white: #f5f5f5;
 $very_light_gray: #eeeeec;
 $lighter_gray: #dedede;
 
 $darker_gray: #3f3f3f;
+$orange: #CC5404;
+//$orange:  #FFA500;
+$light_orange: #F28322;
 
-$bg: $darker_gray;
+$green: #C6CC33;
 
 $header_height: 40em;
 
