--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -15,14 +15,44 @@
     {% include nav.html %}
     {% include hero.html %}
 
-    <div class="container">
-        <section class="title center">
+    <section class="title step center">
+      <article>
+        <div>
           <h1>We love Free Software</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
-        </section>
-    </div>
 
-    {{ content }}
+        </div>
+      </article>
+    </section>
+
+
+    <section class="step center bg-orange">
+      <article>
+        <div>
+          <h1>We love Free Software</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
+
+        </div>
+      </article>
+    </section>
+
+    <section class="step center">
+      <article>
+        <div>
+          <h1>We love Free Software</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
+
+        </div>
+      </article>
+    </section>
+
+    <section class="step center bg-green">
+      <article>
+        <div>
+          {{ content }}
+        </div>
+      </article>
+    </section>
 
 
     {% include footer.html %}
