--- a/src/_assets/stylesheets/patterns/hero.scss
+++ b/src/_assets/stylesheets/patterns/hero.scss
@@ -7,54 +7,54 @@
    $hero-background: desaturate(darken($base-accent-color, 20), 30);
    $hero-color: white;
 
-   background: url(asset_path('pat.png'));
-      background-color: $hero-background;
-      background-repeat: no-repeat;
-      background-position: top;
-      background-size: cover;
-      padding-bottom: 4em;
+   background: url(asset_path('bg.png'));
+   background-color: $hero-background;
+   background-repeat: no-repeat;
+   background-position: top;
+   background-size: cover;
+   padding-bottom: 4em;
 
-      .hero-logo img {
-	 height: 3em;
-	 margin-bottom: 1em;
+   .hero-logo img {
+      height: 3em;
+      margin-bottom: 1em;
+   }
+
+   .hero-inner {
+      @include outer-container;
+      @include clearfix;
+      padding: 3em;
+      margin: auto;
+      text-align: center;
+      color: $hero-color;
+
+      button {
+	 @include button(simple, $base-accent-color);
+	 font-size: $base-font-size;
+	 outline: none;
       }
 
-      .hero-inner {
-	 @include outer-container;
-	 @include clearfix;
-	 padding: 3em;
-	 margin: auto;
+      .hero-copy {
 	 text-align: center;
-	 color: $hero-color;
 
-	 button {
-	    @include button(simple, $base-accent-color);
-	    font-size: $base-font-size;
-	    outline: none;
+	 h1 {
+	    font-size: 1.4em;
+	    margin-bottom: .2em;
+
+	    @include media($large-screen) {
+	       font-size: 1.8em;
+	    }
 	 }
 
-	 .hero-copy {
-	    text-align: center;
+	 p {
+	    margin: auto;
+	    margin-bottom: 3em;
+	    font-weight: 200;
 
-	    h1 {
-	       font-size: 1.4em;
-	       margin-bottom: .2em;
-
-	       @include media($large-screen) {
-		  font-size: 1.8em;
-	       }
-	    }
-
-	    p {
-	       margin: auto;
-	       margin-bottom: 3em;
-	       font-weight: 200;
-
-	       @include media($large-screen) {
-		  font-size: 1.2em;
-		  max-width: 40%;
-	       }
+	    @include media($large-screen) {
+	       font-size: 1.2em;
+	       max-width: 40%;
 	    }
 	 }
       }
    }
+}
