--- a/src/_assets/stylesheets/variables.scss
+++ b/src/_assets/stylesheets/variables.scss
@@ -1,4 +1,6 @@
 @import "lib/neat/neat-helpers";
+@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("http://fonts.googleapis.com/css?family=Lato");
 
 $almost_white: #f5f5f5;
 $very_light_gray: #eeeeec;
@@ -10,7 +12,9 @@ $orange: #CC5404;
 $light_orange: #F28322;
 
 $green: #C6CC33;
+$light_green: #F7F3B2;
 
+$wired_blue: #105F73;
 $header_height: 40em;
 
 // Grid
@@ -19,6 +23,7 @@ $gutter: 20px;
 $grid-columns: 12;
 $max-width: em(1000);
 
+$sans-serif: 'Montserrat', sans-serif;
 // Define your breakpoints
 $tablet: new-breakpoint(max-width 768px 8);
 $mobile: new-breakpoint(max-width 480px 4);
