--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -15,13 +15,23 @@
     {% include nav.html %}
     {% include hero.html %}
 
-    <section class="title step center">
+    <section class="title step center gray-logos">
       <article>
         <div>
           <h1>We love Free Software</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
 
         </div>
+
+        <img src="{% asset_path python_gray.svg %}" id="python-logo">
+        <img src="{% asset_path ruby_gray.svg %}" id="ruby-logo">
+        <img src="{% asset_path nodejs_gray.svg %}" id="nodejs-logo">
+        <img src="{% asset_path js_gray.svg %}" id="js-logo">
+        <img src="{% asset_path html_gray.svg %}" id="html-logo">
+        <img src="{% asset_path css_gray.svg %}" id="css-logo">
+        <img src="{% asset_path git_gray.svg %}" id="git-logo">
+        <img src="{% asset_path linux_gray.svg %}" id="linux-logo">
+
       </article>
     </section>
 
