--- a/src/_assets/stylesheets/variables.scss
+++ b/src/_assets/stylesheets/variables.scss
@@ -14,6 +14,7 @@ $light_orange: #F28322;
 $green: #C6CC33;
 $light_green: #F7F3B2;
 
+$awesome_blue: #40526B;
 $wired_blue: #105F73;
 $header_height: 40em;
 
