--- a/src/_assets/stylesheets/home.css.scss
+++ b/src/_assets/stylesheets/home.css.scss
@@ -8,6 +8,7 @@
 @import "patterns/hero";
 @import "patterns/nav";
 @import "patterns/footer";
+@import "patterns/comments";
 @import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
 @import url("http://fonts.googleapis.com/css?family=Lato");
 
