--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -15,7 +15,7 @@
     {% include nav.html %}
     {% include hero.html %}
 
-    <section class="title step center gray-logos">
+    <section class="title step gray-logos">
       <article>
         <div>
           <h1>We love Free Software</h1>
@@ -36,11 +36,32 @@
     </section>
 
 
-    <section class="step center bg-orange">
+    <section class="step bg-very-light-gray">
       <article>
         <div>
-          <h1>Our Free Software Projects</h1>
-          <p>.</p>
+          <h1>Latest news and activities</h1>
+<div class="comment">
+  <div class="comment-image">
+    <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_1.png" alt="">
+  </div>
+  <div class="comment-content">
+    <h1>First Comment Title or Author</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
+    <p class="comment-detail">Date or details about this post</p>
+  </div>
+</div>
+
+<div class="comment">
+  <div class="comment-image">
+    <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png" alt="">
+  </div>
+  <div class="comment-content">
+    <h1>Another One</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
+    <p class="comment-detail">Date or details about this post</p>
+  </div>
+</div>
+
         </div>
       </article>
     </section>
