--- a/src/_assets/stylesheets/home.css.scss
+++ b/src/_assets/stylesheets/home.css.scss
@@ -8,7 +8,8 @@
 @import "patterns/hero";
 @import "patterns/nav";
 @import "patterns/footer";
-@import "patterns/comments";
+@import "patterns/lists";
+
 @import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
 @import url("http://fonts.googleapis.com/css?family=Lato");
 
@@ -35,7 +36,7 @@ section.step {
    color: #40526B;
       //lighten($dark_gray, 15%);
    article {
-      p {
+      .paragraph {
          @include pad(1em 1em 3em 1em);
          @include calc(font-size, '20px');
          line-heigth: 2;
@@ -51,13 +52,33 @@ section.step {
    }
    &.project {
       @include pad(60px 0 0px 0);
-      article {
-         p {
-            padding-bottom: 0 !important;
-         }
-      }
    }
 }
+
+.activity {
+   margin: 0.5em 0;
+   @include span-columns(12);
+   @include row();
+   @include pad(1em 2em);
+   background: white;
+   border: 1px solid $light_gray;
+   border-radius: 4px;
+
+   .avatar {
+      @include span-columns(1);
+      img {
+         border-radius: 5px;
+         border: 1px solid $lighter_gray;
+      }
+
+   }
+   .activity-text {
+
+   }
+
+}
+
+
 
 div.container {
    section {
