--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -18,8 +18,8 @@
     <section class="title step gray-logos">
       <article>
         <div>
-          <h1>We love Free Software</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
+          <h2>We love Free Software</h2>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
 
         </div>
 
@@ -31,7 +31,6 @@
         <img src="{% asset_path css_gray.svg %}" id="css-logo">
         <img src="{% asset_path git_gray.svg %}" id="git-logo">
         <img src="{% asset_path linux_gray.svg %}" id="linux-logo">
-
       </article>
     </section>
 
@@ -39,55 +38,121 @@
     <section class="step bg-very-light-gray">
       <article>
         <div>
-          <h1>Latest news and activities</h1>
-<div class="comment">
-  <div class="comment-image">
-    <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_1.png" alt="">
-  </div>
-  <div class="comment-content">
-    <h1>First Comment Title or Author</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
-    <p class="comment-detail">Date or details about this post</p>
-  </div>
-</div>
+          <h2>Latest news and activities</h2>
 
-<div class="comment">
-  <div class="comment-image">
-    <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png" alt="">
-  </div>
-  <div class="comment-content">
-    <h1>Another One</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
-    <p class="comment-detail">Date or details about this post</p>
-  </div>
-</div>
+          <div class="activity">
+            <div class="avatar">
+              <img src="{{ 'lxsameer@gnu.org' | to_gravatar }}" alt="lxsameer's avatar" />
+            </div>
+            <div class="activity-text">
+              <h4>Some commit</h4>
+              <p>sdf sdfsdf sdfsd fsdfs df</p>
+            </div>
+
+          </div>
+          <div class="activity">
+            <div class="avatar">
+              <img src="{{ 'lxsameer@gnu.org' | to_gravatar }}" alt="lxsameer's avatar" />
+            </div>
+            <div class="activity-text">
+              <h4>Some commit</h4>
+              <p>sdf sdfsdf sdfsd fsdfs df</p>
+            </div>
+
+          </div>
+          <div class="activity">
+            <div class="avatar">
+              <img src="{{ 'lxsameer@gnu.org' | to_gravatar }}" alt="lxsameer's avatar" />
+            </div>
+            <div class="activity-text">
+              <h4>Some commit</h4>
+              <p>sdf sdfsdf sdfsd fsdfs df</p>
+            </div>
+
+          </div>
 
         </div>
       </article>
     </section>
+
+
+
+
+
+
+
+
 
     <section class="step center project">
       <article>
         <div>
-          <h1>Faalis</h1>
-          <p>asdad</p>
-        </div>
+          <div class="bullets">
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-1">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>This Bullet Title</h2>
+                <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+              </div>
+            </div>
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-2">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_3.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>Another Bullet Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+              </div>
+            </div>
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-3">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_4.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>Last Bullet Title</h2>
+                <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+              </div>
+            </div>
+          </div>
 
-        <div class="screenshots">
-          <img src="{% asset_path faalis_screen.png %}" class="screenshot" alt="Faalis screenshots">
+          <div class="bullets">
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-1">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_2.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>This Bullet Title</h2>
+                <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+              </div>
+            </div>
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-2">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_3.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>Another Bullet Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+              </div>
+            </div>
+            <div class="bullet three-col-bullet">
+              <div class="bullet-icon bullet-icon-3">
+                <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_4.png" alt="">
+              </div>
+              <div class="bullet-content">
+                <h2>Last Bullet Title</h2>
+                <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+              </div>
+            </div>
+          </div>
+
+
+
+
         </div>
       </article>
     </section>
 
-    <section class="step center">
-      <article>
-        <div>
-          <h1>We love Free Software</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id nisi erat. Vivamus non purus neque. Donec sit amet fermentum nunc. In hac habitasse platea dictumst. Nulla vulputate auctor velit, eu pulvinar ipsum molestie eu. Nulla sed tincidunt est. Nullam mattis diam sit amet nibh euismod, id venenatis magna pulvinar. Quisque volutpat lacus velit, ultricies vehicula nisi vestibulum ut. Nunc vehicula lobortis vestibulum. Aliquam commodo eros ultricies nisi imperdiet, ac aliquet velit ullamcorper. Vivamus at accumsan magna. Phasellus nec purus tellus. Maecenas hendrerit dolor lorem, vel malesuada erat malesuada non. Mauris eros quam, lacinia eget risus eget, volutpat pharetra enim. Praesent aliquam et nulla non gravida.</p>
-
-        </div>
-      </article>
-    </section>
 
     <section class="step center bg-green">
       <article>
