--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -6,10 +6,12 @@
     <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
     <div class="nav">
       <ul id="navigation-menu">
-        <li><a href="javascript:void(0)">Products</a></li>
-        <li><a href="javascript:void(0)">About Us</a></li>
-        <li><a href="javascript:void(0)">Contact</a></li>
-        <li class="sign-up"><a href="javascript:void(0)">Sign Up</a></li>
+        <li><a href="#">FOSS Fan</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Activities</a></li>
+        <li><a href="#">Projects</a></li>
+
+        <li class="sign-up"><a href="#"><i class="fa fa-github"></i></a></li>
       </ul>
     </div>
   </div>
