--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,8 +1,5 @@
 <header class="navigation">
   <div class="menu-wrapper">
-    <a href="javascript:void(0)" class="logo">
-      <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_1.png" alt="">
-    </a>
     <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
     <div class="nav">
       <ul id="navigation-menu">
@@ -11,7 +8,7 @@
         <li><a href="#">Activities</a></li>
         <li><a href="#">Projects</a></li>
 
-        <li class="sign-up"><a href="#"><i class="fa fa-github"></i></a></li>
+        <li class="nav-button"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
       </ul>
     </div>
   </div>
