projects generator done

--- a/src/_layouts/project_index.html
+++ b/src/_layouts/project_index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
 ---
-<h1>{{ project['name'] }}</h1>
-<h2>{{ title }}</h2>
-<h3>{{ project }}</h3>
+<h1>{{ page.project['name'] }}</h1>
+<h2>{{ page.title }}</h2>
